# monadic-traits

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: maybe.rs
src/: lib.rs  maybe.rs  traits.rs
tests/: maybe.rs
