[package]
name = "monadic-traits"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Tobias Betz <tobiasbetz@hotmail.de>"]
description = "Functor, Applicative and monad traits + nightly Try/? support"
repository = "https://github.com/Eixix/monadic-traits"
keywords = ["monad", "functor", "applicative", "fp", "functional"]
categories = ["algorithms", "rust-patterns"]

[features]
default = ["nightly"]
nightly = []

[package.metadata.docs.rs]
features = ["nightly"]
rustdoc-args = ["--cfg", "docsrs"]